--- a/style.css
+++ b/style.css
@@ -769,6 +769,10 @@ video {
   width: 100%;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
 .max-w-40 {
   max-width: 10rem;
 }
@@ -1267,6 +1271,10 @@ video {
 
   .sm\:w-80 {
     width: 20rem;
+  }
+
+  .sm\:w-96 {
+    width: 24rem;
   }
 
   .sm\:max-w-\[60vw\] {
