--- a/style.css
+++ b/style.css
@@ -773,6 +773,18 @@ video {
   width: 20rem;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
 .max-w-40 {
   max-width: 10rem;
 }
